Working version with internal CSS

--- a/app.yaml
+++ b/app.yaml
@@ -6,9 +6,15 @@ threadsafe: true
 
 
 handlers:
+
+- url: /stylesheets
+  static_dir: stylesheets
+  
 - url: /.*
   script: inter-mingle.application
 
 libraries:
 - name: webapp2
+  version: latest
+- name: jinja2
   version: latest
